tests/invalid/type/cast_byte_minus1.pts
function main() : void {
    byte b = (byte)-1;
}
